@@ -1,3 +1,6 @@
+2001-08-20  Max Horn <max@quendi.de>
+	* mouse.cc: changed set_speed_cursor() to set hand cursor when in dont_move mode
+
 2001-08-20  Ryan Nunn <triforce@merlin.net.au>
 	* cheat_screen.cc/.h : Added 'Advanced' numerical NPC Flag editor.
 
